<resources>
    <string name="app_name">FindHouse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mail_address">Mail address</string>
    <string name="login">Login</string>
    <string name="Password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_your_account">Create your account.</string>
    <string name="i_m_a_owner">I\'m a OWNER</string>
    <string name="i_m_a_student">I\'m a STUDENT</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create An Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="open"> Open</string>
    <string name="close">Close</string>
    <string name="title">Title</string>
    <string name="floor_number">Floor Number</string>
    <string name="rooms">Rooms</string>
    <string name="squaremetre">Squaremetre</string>
    <string name="price">Price</string>
    <string name="add_home_details_to_current_listing">Add Home Details to Current Listing</string>
    <string name="description">Description</string>
    <string name="call_owner">Call Owner</string>


    <string-array name="universities">
        <item>Dokuz Eylul University</item>
        <item>Ege University</item>
        <item>Izmir Ekonomi University</item>
        <item>Yasar University</item>
        <item>Izmir Yuksek Teknoloji University</item>
    </string-array>
</resources>