<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".view.CreateListingFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rw_addPhotos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/cw_addPhoto"
        app:layout_constraintEnd_toEndOf="@+id/cw_addPhoto"
        app:layout_constraintStart_toStartOf="@+id/cw_addPhoto"
        app:layout_constraintTop_toTopOf="@+id/cw_addPhoto" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cw_addPhoto"
        style="@style/Widget.Material3.CardView.Elevated"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:elevation="16dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/container_title"
        app:layout_constraintEnd_toEndOf="@+id/container_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/container_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tw_addPhotos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tap to add photos"
                android:textSize="14sp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="TODO"
                android:src="@drawable/ic_add_photo"
                app:tint="@color/md_theme_dark_background" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/container_listingType"
        app:layout_constraintEnd_toEndOf="@+id/container_listingType"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/container_listingType"
        app:layout_constraintTop_toBottomOf="@+id/cw_addPhoto">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_listingType"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/container_price"
        app:layout_constraintEnd_toEndOf="@+id/container_price"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/container_price"
        app:layout_constraintTop_toBottomOf="@+id/container_title">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/et_listingType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Listing Type"
            android:inputType="none"
            android:paddingVertical="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/container_description"
        app:layout_constraintEnd_toEndOf="@+id/container_description"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/container_description"
        app:layout_constraintTop_toBottomOf="@+id/container_listingType"
        app:suffixText="TRY"
        app:suffixTextColor="@color/md_theme_light_onSurface">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="150"
        app:layout_constraintBottom_toTopOf="@+id/btn_createListing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_price"
        app:suffixTextColor="@color/md_theme_light_onSurface">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="2"
            android:maxLines="5"
            android:scrollbars="vertical"
            android:singleLine="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_createListing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Create Listing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/container_description"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/container_description"
        app:layout_constraintTop_toBottomOf="@+id/container_description" />

</androidx.constraintlayout.widget.ConstraintLayout>